--- a/src/styles.css
+++ b/src/styles.css
@@ -2,15 +2,18 @@ body{
     font-family: arial;
     color: #333;
 }
+
 h1{
     font-weight: normal;
     margin: 20px auto;
     text-align: center;
 }
+
 form{
     width: 500px;
     margin: 20px auto;
 }
+
 input{
     display: block;
     padding: 8px 16px;
@@ -23,10 +26,30 @@ input{
     outline: none !important;
 }
 
-.valid{
+
+/* validation style. */
+
+input.valid{
     border-color: #01FF70;
 }
 
-.invalid{
-    border-color: red;
+input.invalid{
+    border-color: #FF4136;
+}
+
+input + p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: .9em;
+    font-weight: bold;
+    text-align: center;
+    margin: 0 10px;
+    color: #FF4136;
+    opacity: 0;
+    height: 0;  
+}
+
+input.invalid + p{
+    opacity: 1;
+    height: auto;
+    margin-bottom: 20px;
 }
